# ComputerGraphics

./: CMakeLists.txt  data.json  lab1.cpp  lab2.cpp  lab3.cpp  main.cpp  rgr.cpp
